--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cubos-movie-project",
   "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "pnpm -r run dev"
   },
   "keywords": [
     "cubos",
