--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query-devtools": "^5.83.0",
     "@tanstack/react-router": "^1.127.8",
     "@tanstack/react-router-devtools": "^1.127.8",
+    "@tanstack/zod-adapter": "^1.128.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
