--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "dayjs": "^1.11.13",
+    "jose": "^6.0.12",
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.2",
